# JNICheckers

./: .gitignore  README.md
java/lib/: CMakeLists.txt
lib/checkers/: Board.cpp  Board.h  CMakeLists.txt  a.out  library.cpp  library.h  nohup.out
src/main/: Board.java  Checker.java  CheckerType.java  GameOverPanel.java  Main.java  Palette.java  StateType.java  Tile.java
src/tests/: Initialization.java  KingChecker.java  ManChecker.java  Victory.java
untitled/src/: Main.java
